tests/ui/generator/type-mismatch-signature-deduction.stderr
error[E0308]: mismatched types
  --> $DIR/type-mismatch-signature-deduction.rs:14:9
   |
LL |         5
   |         ^ expected `Result<{integer}, _>`, found integer
   |
   = note: expected enum `Result<{integer}, _>`
              found type `{integer}`
note: return type inferred to be `Result<{integer}, _>` here
  --> $DIR/type-mismatch-signature-deduction.rs:9:20
   |
LL |             return Ok(6);
   |                    ^^^^^
help: try wrapping the expression in a variant of `Result`
   |
LL |         Ok(5)
   |         +++ +
LL |         Err(5)
   |         ++++ +

error[E0271]: type mismatch resolving `<[generator@$DIR/type-mismatch-signature-deduction.rs:7:5: 7:7] as Generator>::Return == i32`
  --> $DIR/type-mismatch-signature-deduction.rs:5:13
   |
LL | fn foo() -> impl Generator<Return = i32> {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Result<{integer}, _>`, found `i32`
   |
   = note: expected enum `Result<{integer}, _>`
              found type `i32`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0271, E0308.
For more information about an error, try `rustc --explain E0271`.
